# sphinx

app/: pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/debug/: AndroidManifest.xml
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/dev/array21/app/: MainActivity.kt
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/: app.dart
app/lib/src/api/: provider.dart
app/lib/src/components/: ScaffoldLoader.dart  loader.dart  pin_dialog.dart
app/lib/src/group/: group_model.dart  group_view.dart
app/lib/src/product/: product_model.dart  product_view.dart
app/lib/src/user/: user_model.dart  user_view.dart
server/: Cargo.toml
server/dal/: Cargo.toml  build.rs
server/dal/migrations/: 1_initial.sql
server/dal/src/: group.rs  lib.rs  product.rs  user.rs
server/proto/: Cargo.toml  build.rs
server/proto/protos/entity/: group.proto
server/proto/protos/payload/v1/group/: list.proto
server/proto/src/: lib.rs
server/proto_convert/: Cargo.toml
server/proto_convert/src/: group.rs  lib.rs
server/sphinx/: Cargo.toml
server/sphinx/src/: error.rs  main.rs
server/sphinx/src/routes/v1/group/: get.rs  list.rs  mod.rs
